infra/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend-depl
spec:
 replicas: 1
 selector:
  matchLabels:
    app: backend
 template:
   metadata:
    name: backend-pod
    labels:
     app: backend
   spec:
    containers:
     - name: backend
       image: alvinlucillo/k8stodo-backend:latest

---

apiVersion: v1
kind: Service
metadata:
 name: backend-srv
spec:
 type: ClusterIP
 selector:
  app: backend
 ports:
  - port: 3001
    targetPort: 3001
