infra/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
spec:
 ingressClassName: nginx
 rules:
  - host: habittracker.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-srv
            port:
              number: 3000
